--- a/ShellDLL/ShellDLL.vcxproj.filters
+++ b/ShellDLL/ShellDLL.vcxproj.filters
@@ -162,6 +162,9 @@
     <ClCompile Include="FTPSock.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="version.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ShellDLL.def">
