--- a/EasySFTP/EasySFTP.vcxproj
+++ b/EasySFTP/EasySFTP.vcxproj
@@ -227,9 +227,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="AddrCBox.cpp" />
+    <ClCompile Include="CallSync.cpp" />
     <ClCompile Include="EasySFTP.cpp" />
     <ClCompile Include="ExplrDDE.cpp" />
-    <ClCompile Include="FileStrm.cpp" />
     <ClCompile Include="Func.cpp" />
     <ClCompile Include="LFileVw.cpp" />
     <ClCompile Include="MainWnd.cpp" />
@@ -245,19 +245,21 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SyncDlg.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddrCBox.h" />
+    <ClInclude Include="CallSync.h" />
     <ClInclude Include="CommndUI.h" />
     <ClInclude Include="EasySFTP.h" />
     <ClInclude Include="ExplrDDE.h" />
-    <ClInclude Include="FileStrm.h" />
     <ClInclude Include="Func.h" />
     <ClInclude Include="LFileVw.h" />
     <ClInclude Include="MainWnd.h" />
     <ClInclude Include="Option.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SyncDlg.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
