--- a/EasySFTP/EasySFTP.vcxproj
+++ b/EasySFTP/EasySFTP.vcxproj
@@ -265,6 +265,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig" />
+    <None Include="..\.github\lib-versions.env" />
+    <None Include="..\.github\workflows\build-and-release.yml" />
+    <None Include="..\.github\workflows\build-libs.yml" />
     <None Include="..\CHANGELOG.md" />
     <None Include="..\README.md" />
     <None Include="AddrBtns.bmp" />
@@ -296,6 +300,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\EasySFTP.txt" />
+    <Text Include="..\license.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
