--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -197,7 +197,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.gitignore" />
+    <None Include="..\MuiResourceCompile.props" />
+    <None Include="..\MuiResourceCompile.targets" />
     <None Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="..\MuiResourceCompile.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
