--- a/ShellDLL/ShellDLL.vcxproj.filters
+++ b/ShellDLL/ShellDLL.vcxproj.filters
@@ -189,6 +189,9 @@
     <None Include="ShellDLL.tlb.rc2">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="ShellDLL.rcconfig">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auth.h">
@@ -369,5 +372,13 @@
     <Midl Include="ShellDLL.idl">
       <Filter>ソース ファイル</Filter>
     </Midl>
+  </ItemGroup>
+  <ItemGroup>
+    <MuiResourceCompile Include="ShellDLL.en-US.rc">
+      <Filter>リソース ファイル</Filter>
+    </MuiResourceCompile>
+    <MuiResourceCompile Include="ShellDLL.ja-JP.rc">
+      <Filter>リソース ファイル</Filter>
+    </MuiResourceCompile>
   </ItemGroup>
 </Project>
