--- a/RegESFTP/RegESFTP.vcxproj
+++ b/RegESFTP/RegESFTP.vcxproj
@@ -113,9 +113,7 @@
       <AdditionalDependencies>$(TargetDir)Common.lib;$(TargetDir)EasySFTP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <MuiResourceCompile>
-      <GenerateLanguageNeutralResource>true</GenerateLanguageNeutralResource>
-    </MuiResourceCompile>
-    <MuiResourceCompile>
+      <IncludeNeutralResourceToLink>false</IncludeNeutralResourceToLink>
       <ResourceOutputLNFileName>$(IntDir)$(ProjectName).ignore.res</ResourceOutputLNFileName>
     </MuiResourceCompile>
   </ItemDefinitionGroup>
@@ -144,9 +142,7 @@
       <AdditionalManifestFiles>$(TargetFileName).manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
     <MuiResourceCompile>
-      <GenerateLanguageNeutralResource>true</GenerateLanguageNeutralResource>
-    </MuiResourceCompile>
-    <MuiResourceCompile>
+      <IncludeNeutralResourceToLink>false</IncludeNeutralResourceToLink>
       <ResourceOutputLNFileName>$(IntDir)$(ProjectName).ignore.res</ResourceOutputLNFileName>
     </MuiResourceCompile>
   </ItemDefinitionGroup>
@@ -166,9 +162,7 @@
       <Version>0.14</Version>
     </Link>
     <MuiResourceCompile>
-      <GenerateLanguageNeutralResource>true</GenerateLanguageNeutralResource>
-    </MuiResourceCompile>
-    <MuiResourceCompile>
+      <IncludeNeutralResourceToLink>false</IncludeNeutralResourceToLink>
       <ResourceOutputLNFileName>$(IntDir)$(ProjectName).ignore.res</ResourceOutputLNFileName>
     </MuiResourceCompile>
   </ItemDefinitionGroup>
@@ -198,9 +192,7 @@
       <AdditionalManifestFiles>$(TargetFileName).manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
     <MuiResourceCompile>
-      <GenerateLanguageNeutralResource>true</GenerateLanguageNeutralResource>
-    </MuiResourceCompile>
-    <MuiResourceCompile>
+      <IncludeNeutralResourceToLink>false</IncludeNeutralResourceToLink>
       <ResourceOutputLNFileName>$(IntDir)$(ProjectName).ignore.res</ResourceOutputLNFileName>
     </MuiResourceCompile>
   </ItemDefinitionGroup>
@@ -213,6 +205,10 @@
   <ItemGroup>
     <MuiResourceCompile Include="RegESFTP.en-US.rc" />
     <MuiResourceCompile Include="RegESFTP.ja-JP.rc">
+      <IncludeNeutralResourceToLink Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</IncludeNeutralResourceToLink>
+      <IncludeNeutralResourceToLink Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</IncludeNeutralResourceToLink>
+      <IncludeNeutralResourceToLink Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</IncludeNeutralResourceToLink>
+      <IncludeNeutralResourceToLink Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</IncludeNeutralResourceToLink>
       <ResourceOutputLNFileName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)$(ProjectName).res</ResourceOutputLNFileName>
       <ResourceOutputLNFileName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)$(ProjectName).res</ResourceOutputLNFileName>
       <ResourceOutputLNFileName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)$(ProjectName).res</ResourceOutputLNFileName>
