--- a/EasySFTP/EasySFTP.vcxproj.filters
+++ b/EasySFTP/EasySFTP.vcxproj.filters
@@ -139,6 +139,9 @@
     <None Include="..\.github\lib-versions.env">
       <Filter>GitHub Workflows</Filter>
     </None>
+    <None Include="EasySFTP.version.rc2">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="EasySFTP.rc">
