--- a/ShellDLL/ShellDLL.vcxproj.filters
+++ b/ShellDLL/ShellDLL.vcxproj.filters
@@ -192,6 +192,9 @@
     <None Include="ShellDLL.rcconfig">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="ShellDLL.version.rc2">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auth.h">
